# ftl-pytest-agent

./: README.md  pyproject.toml
ftl_agent/: Gradio_UI.py  __init__.py  agents.py  cli.py  codegen.py  core.py  default_tools.py  local_python_executor.py  prompts.py  shell.py  tools.py  ui.py  ui2.py
ftl_agent/prompts/: code_agent.yaml
ftl_pytest_agent/: Gradio_UI.py  __init__.py  _function_type_hints_utils.py  agents.py  cli.py  cli2.py  codegen.py  core.py  default_tools.py  shell.py  testgen.py  tools.py  ui.py  util.py  vendored_tools.py
tests/: test_tools.py
