[project]
name = "ftl-agent"
version = "0.1.0"
dependencies = [
    "smolagents",
    "faster_than_light",
    "gradio",
]

[tool.setuptools]
packages = ["ftl_agent"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl-agent = "ftl_agent.cli:main"
ftl-agent-ui = "ftl_agent.ui:main"
ftl-agent-shell = "ftl_agent.shell:main"


