[project]
name = "ftl-agent"
version = "0.1.0"
dependencies = [
    "smolagents[litellm] @ git+ssh://git@github.com/benthomasson/smolagents@66b76200e79df54d8b9e96d31f2bfd04fa578f94",
    "faster_than_light",
    "gradio",
    "black",
]

[tool.setuptools]
packages = ["ftl_agent"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl-agent = "ftl_agent.cli:main"
ftl-agent-ui = "ftl_agent.ui:main"
ftl-agent-shell = "ftl_agent.shell:main"


