[project]
name = "ftl-pytest-agent"
version = "0.1.2"
dependencies = [
    "smolagents[litellm]==1.9.2",
    "faster_than_light",
    "gradio",
    "black",
    "pytest",
    "coverage",
]

[tool.setuptools]
packages = ["ftl_pytest_agent", "ftl_pytest_agent.prompts"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ftl-pytest-agent = "ftl_pytest_agent.cli:main"
ftl-pytest-agent-ui = "ftl_pytest_agent.ui:main"
ftl-pytest-agent2 = "ftl_pytest_agent.cli2:main"

[tool.setuptools.package-data]
"ftl_pytest_agent.prompts" = ["*.yaml"]

